envoy-gateway/policies/policy2.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-header-rule"
spec:
  endpointSelector:
    matchLabels:
      name: echo-service
  ingress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: "/$"
          headers:
          - 'X-My-Header: true'
